  `KernelRiscvUseClintMtime` configuration option which is enabled by default for all current RISC-V
  platforms. With future RISC-V platforms, enabling this configuration option may not actually be an
  optimization.
* Added SMC Capability (smc_cap) and SMC forwarding for aarch64 platforms. See
  [RFC-9](https://sel4.atlassian.net/browse/RFC-9).

## Upgrade Notes

* The change in `seL4_MinSchedContextBits` can lead to failure where code previously created
  scheduling contexts with size `seL4_MinSchedContextBits` and expected more than the 2 minimum
  refills to be available for that size. Either use a larger size (the previous value 8 of
  `seL4_MinSchedContextBits`) in retyping, or request fewer refills.

---
12.1.0 2021-06-10: SOURCE COMPATIBLE

## Changes

* Moved kernel configuration header to libsel4.
* Improved benchmarking:
  - Made the kernel log buffer to be derived from cmake config.
  - Added x86_64 kernel log buffer.
  - Implemented RISC-V benchmark timestamping.
  - Implemented benchmark log buffer for RISC-V.
* Moved cap functions out of inline to make changing cap bitfields less noisy.
* Removed weak definition of the __sel4_ipc_buffer variable which was causing large thread local storages to be
  required.
* Prepared the bitfield generator for Isabelle 2021.
* Made a number of improvements to the CMake build scripts.
* Added pre-processor 'include guards' for auto-generated files.
* Added missing CONFIG_PLAT_IMX7 pre-processor '#define's.
* Added `#pragma once` to the autoconf headers.
* Removed `HAVE_AUTOCONF` guards in `sel4/config.h`.
* Improved the manual:
  - Corrected descriptions of CNode addressing.
  - Documented initial thread's SMMU caps.
* Improved libsel4:
  - Removed redundant `HAVE_AUTOCONF` header guards in libsel4.
  - Added missing `macros.h` #include in libsel4.
  - Cleaned-up `macros.h` in libsel4.
  - Added checks to use `_Static_assert()` in libsel4 if it is available.
  - Unified definitions in `simple_types.h` in libsel4.